--- a/Form/index.html
+++ b/Form/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
     <link rel="stylesheet" href="scss/style.css">
-    $ npm install axios
+    
 </head>
 <body>
   <form id="user-form" name="user-form">
@@ -56,7 +56,7 @@
 
 
   </form>  
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    <script src="./js/data.js"></script> 
 </body>
 </html>
